--- a/Graficacion/Practica01/Epicicloide/style.css
+++ b/Graficacion/Practica01/Epicicloide/style.css
@@ -1,3 +1,8 @@
+* {
+  font-family: "Righteous", cursive;
+  letter-spacing: 3px;
+}
+
 body {
   background: rgb(61, 104, 121);
 }
@@ -5,4 +10,54 @@ body {
 #myCanvas {
   border-style: solid;
   border-color: azure;
+}
+
+h1 {
+  text-align: center;
+  text-shadow: rgb(10, 69, 117) 1px 2px;
+  color: white;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: flex-start;
+  justify-content: center;
+  padding: 5px;
+}
+
+#formulario {
+  color: white;
+  text-shadow: rgb(10, 69, 117) 2px 2px;
+}
+
+#formulario input {
+  border-radius: 5px;
+  margin: 0px 5px 0px 5px;
+  text-decoration: none;
+}
+
+button {
+  border-radius: 5px;
+  margin: 0px 5px 0px 5px;
+}
+
+#page-container {
+  position: relative;
+  min-height: 95vh;
+}
+
+#content-wrap {
+  padding-bottom: 2rem; /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2rem; /* Footer height */
+  text-decoration: none;
+  color: rgb(183, 220, 255);
 }
